{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "e3c53088-c0b3-4d9c-bbf9-093c23afce1d",
            "actions": [
                {
                    "name": "movement",
                    "type": "PassThrough",
                    "id": "36136eca-936d-4b12-b411-96015319d6af",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePostion",
                    "type": "PassThrough",
                    "id": "a88f49a5-9051-4f14-bcf7-ebfa4781ea06",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "30c1d6c9-555c-4837-9450-f9e501baa793",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryWeapon",
                    "type": "Button",
                    "id": "71eca9ba-d34c-4baa-8103-20044c09ddc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryWeapon",
                    "type": "Button",
                    "id": "7be9c0df-6d86-4986-ba49-6a6c08f6c6c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EquipmentSlot",
                    "type": "Button",
                    "id": "57b3ff92-35ad-4bab-b8b5-23190c420cb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GrenadeThrow",
                    "type": "Button",
                    "id": "6133ab22-bf09-4138-b709-16217f48b074",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7f8a15ec-8084-40f4-b583-c335bafaa04b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7eeaad71-2f83-4a48-aa75-3649cfa0bdb0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "be62dcab-da09-4166-b6af-4a15d624f231",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "15b8ade7-424a-45c5-b9c9-3100c217039f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3711bd82-370a-4c55-8ecf-1dffb5916236",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "dc1aec69-4aee-4320-9df9-99f34625bef8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fafe6b6a-63a2-429f-88e1-5527d7982f86",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "58183baa-81f9-427a-a11f-57dba8bb6bb7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d7798527-252e-49be-84e3-37dfcf376f62",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "61a6b00b-4f5b-4641-bbd8-be3645d6a3e6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ff903882-77d5-4177-870f-a7be0f736125",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0768c2d1-8e74-42f8-a172-ae77a0f8d73e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "MousePostion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98b2f643-4217-4bdd-8491-6753ed7a37c4",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "PrimaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6367c36-a242-4b6e-af47-8c0eaa8af46d",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "SecondaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "609b6206-3e3e-4926-807c-ec35e2f04602",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "EquipmentSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f096ed49-61db-46c6-8828-69d52894a54e",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "GrenadeThrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}